[package]
name = "rltk"
version = "0.1.0"
authors = ["ddmills <mills.dalton@gmail.com>"]
edition = "2018"

[dependencies]
rltk = { version = "0.8.1", features = ["serde"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde= { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
